Cursor gets hidden when pressing functions, media, browser keys
Categories
(Core :: Widget: Win32, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox103 | --- | fixed |
People
(Reporter: valflaux, Assigned: handyman, NeedInfo)
References
Details
(Whiteboard: [win:stability])
Attachments
(1 file)
Steps to reproduce
On a webpage, press a function key (F1, F2 etc.), a media key (play, stop etc.), a browser key (previous, next) or a volume key (vol. up, mute etc.)
Actual result
The cursor is hidden. It reappears when moved or if the key triggers the Windows media overlay.
Expected result
Cursor should remain visible.
All keys not involved in typing text should not hides the cursor.
This is especially noticeable with the F5 key used to refresh the page.
This is similar to bug 1768903.
Comment 1•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Audio/Video: Playback' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 3•3 years ago
|
||
Also includes the Fn key, which isn't documented to map to a special virtual key code but maps to 0xff, an undefined code, on tested machines.
Comment 5•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Comment 6•3 years ago
|
||
I could not reproduce the issue on Win10/Win7 using build 103.0a1(20220616190155) I used both 32 and 64 bits, I verified the steps from description against youtube.
Can you please mention if there are other steps in order to reproduce the issue?
If not can you please confirm issue is not reproducing on your side using latest Beta (https://archive.mozilla.org/pub/firefox/candidates/103.0b4-candidates/) and Nightly (https://archive.mozilla.org/pub/firefox/nightly/2022/07/2022-07-05-09-59-04-mozilla-central/). Thank you.
Description
•