Bug 1774694: Function, browser, media and volume keys should not hide cursor on Windows r=cmartin

Also includes the Fn key, which isn't documented to map to a special virtual key code but maps to 0xff, an undefined code, on tested machines.

Differential Revision: https://phabricator.services.mozilla.com/D149928